border alignment solved

--- a/pg-vite/src/css/Global.css
+++ b/pg-vite/src/css/Global.css
@@ -1,10 +1,11 @@
-*::after,
+/* *::after,
 *::before {
-  box-sizing: border-box;
-}
+  box-sizing: border-box; 
+} */
 
 * {
   margin: 0;
+  box-sizing: border-box;
 }
 
 html,
@@ -67,7 +68,6 @@ nav {
 }
 
 
-
 video {
   border-radius: 5px;
   border: 1px solid #4444dd;
@@ -100,6 +100,8 @@ video {
   margin: 31px 0 0;
   border-bottom: 1px black solid;
   border-top: 1px black solid;
+  box-sizing: border-box;
+
 }
 
 .logo {
@@ -172,7 +174,6 @@ video {
   }
 }
 
-
 @media(max-width: 1050px) {
 
   .logo {
@@ -219,7 +220,6 @@ video {
     justify-content: center;
   }
 
-
   .PG {
     line-height: 6vw;
     font-size: 6vw;
@@ -239,12 +239,10 @@ video {
     flex-direction: column;
   }
 
-
   .section-top-txt {
     margin: 40px 0;
     justify-content: space-evenly;
     min-height: 50vh;
-
   }
 
   .section-top-img {
