--- a/pg-vite/src/css/Header.css
+++ b/pg-vite/src/css/Header.css
@@ -5,6 +5,8 @@
   justify-content: space-between;
   padding: 0 10px 0;
   border-bottom: 1px solid black;
+  z-index: 1;
+
 }
 
 .home-btn {
