--- a/pg-vite/src/css/music.css
+++ b/pg-vite/src/css/music.css
@@ -1,5 +1,5 @@
 .music {
-    margin: 50px 6.5vw;
+    margin: 5px 6.5vw;
 }
 
 .section {
@@ -24,8 +24,9 @@
     background-color: rgb(249, 223, 235);
 }
 
-.border-left{
-  border-left: 1px solid black;
+.border-left {
+    margin-left: -1px;
+    border-left: 1px solid black;
 
 }
 
